static/styles/main.less
/* ... */
// Healthcheck tab
.healthcheck-tab {
  @padding-top-controls: 10px;
  .healthcheck-controls {
    margin: 2px 0 @padding-top-controls 0;
    padding-bottom: 0;
    padding-left: 7px;
    .toggle-credentials {
      margin-right: 10px;
      .provide-credentials {
        padding-left: 5px;
      }
    }
    .select-all {
      margin-top: 14px;
      label {
        cursor: pointer;
        > span {
          margin-left: 10px;
        }
      }
    }
    .btn {
      margin-top: 8px;
      margin-bottom: 15px;
    }
  }
  .credentials {
    .alert {
      margin-left: -15px;
      margin-right: -15px;
    }
  }
  .healthcheck-table {
    &.disabled {
      tr th label,
      tr td label {
        cursor: default;
      }
      .custom-tumbler span {
        cursor: not-allowed;
      }
    }
    tr {
      td {
        &.healthcheck-name,
        &.healthcheck-col-duration,
        &.healthcheck-col-status {
          padding-top: @padding-top-controls;
        }
        &.healthcheck-col-duration,
        &.healthcheck-col-status {
          line-height: 35px;
        }
        label {
          cursor: pointer;
          font-weight: normal;
          line-height: 35px;
          margin: 0;
        }
        .custom-tumbler {
          span {
            margin-top: @padding-top-controls - 2;
          }
        }
        .well {
          margin: 10px 0;
          padding: 10px;
          b {
            .font-extrabold;
          }
        }
      }
      th {
        label {
          cursor: pointer;
          line-height: 17px;
        }
        .font-semibold;
        text-align: center;
        &.healthcheck-name {
          text-align: left;
        }

        &.healthcheck-name,
        &.healthcheck-col-duration,
        &.healthcheck-col-status {
          line-height: 25px;
        }
        .custom-tumbler {
          span {
            margin-top: @padding-top-controls + 8;
          }
        }
      }
    }
    .custom-tumbler {
      margin: 0;
      span {
        margin-top: @padding-top-controls;
        cursor: pointer;
      }
    }
    tbody {
      .healthcheck-col-duration,
      .healthcheck-col-status {
        text-align: center;
        .glyphicon {
          vertical-align: middle;
        }
      }
    }
  }
}

.network-tab, .settings-tab {
  @base-indent: 10px;
  .subtab-icon {
    position: absolute;
    left: 5px;
    top: 10px;
    z-index: 1;
    width: 17px;
    height: 17px;
  }
  .page-buttons {
    .btn-group {
      margin-left: @base-indent;
    }
  }
  .forms-box {
    .setting-section {
      margin-bottom: @base-indent * 4;
    }
    .form-group {
      label {
        display: flex;
        align-items: center;
        min-height: 30px;
        padding-top: 0;
      }
      .field-list > div {
        clear: left;
      }
    }
    .help-block {
      color: @gray;
    }
  }
  .nav-pills:last-child:after {
    margin-bottom: @base-indent * 2;
  }
  h3 {
    .checkbox-group {
      margin-bottom: 0;
      label {
        line-height: 1;
      }
      .help-block {
        display: none;
      }
    }
    .tooltip-icon {
      color: @gray;
      cursor: default;
      padding: 5px 20px 0 5px;
    }
    .popover-container {
      position: relative;
      display: inline-block;
      .requirements-popover {
        display: block;
        overflow: visible;
        top: -6px;
        left: 35px;
        width: 350px;
        max-width: 350px;
        .break-word;
        .arrow {
          top: 20px;
          left: -11px;
        }
        .popover-content {
          padding-right: 8px;
          padding-bottom: 0;
        }
      }
    }
  }
  .alert {
    margin-top: -@base-indent;
  }
  .plugin-versions {
    margin-bottom: 25px;
    .radio-group {
      > h4, > div {
        display: block;
        float: left;
        margin: 0;
      }
      h4 {
        position: relative;
        top: -2px;
      }
      .custom-tumbler + span {
        position: relative;
        top: 1px;
        padding-right: 5px;
      }
    }
  }
}

// Settings tab
.settings-tab {
  .form-group {
    .help-block {
      display: flex;
      align-items: center;
      min-height: 30px;
      padding-top: 0;
    }
  }
  .plugin-versions {
    .radio-group {
      margin-left: 10px;
    }
  }
}
/* ... */

